--- a/css/main.css
+++ b/css/main.css
@@ -105,13 +105,18 @@ body {
   padding: 2em;
   font-size: 1.25em;
   height: 100%;
+  background: #fff0f5;
+}
+
+.outline {
+  background-color: #fff0f5;
 }
 
 .wrapper {
   /*add display:flex and set justify-content to space-between*/
   display: flex;
-  justify-content: space-between;
-  font-weight: 700;
+  justify-content: center;
+  font-weight: 600;
 }
 
 .div-1,
@@ -120,13 +125,19 @@ body {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   display: flex;
   width: 30%;
-  justify-content: center;
+  justify-content: justify;
   align-items: center;
-  color: #fff;
+  color: #301934;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
-  height: 300px;
+  font-size: 1em;
+  background-color: #fff0f5;
+  height: auto;
+  padding: 20px;
+}
+
+.div-1,
+.div-2 {
+  border-right: 1px solid #301934;
 }
 
 /* ==========================================================================
